--- a/bin/setup_env.yml
+++ b/bin/setup_env.yml
@@ -47,15 +47,16 @@
           content: |
             #this is the default inventory file
             #for each node in your Couchbase cluster, simply repeat each host entry with the services you want running on the node
-            couchbase_nodes:
-              hosts:
-                myhost1.acme.com:
-                  services:
-                    - kv
-                    - n1ql
-                    - index
-                myhost2.acme.com:
-                  services:
-                    - kv
-                    - n1ql
-                    - index
+            ---
+              couchbase_nodes:
+                hosts:
+                  ec2-0-0-0-0.compute-1.amazonaws.com:
+                    services:
+                      - kv
+                      - index
+                      - n1ql
+                  ec2-0-0-0-0.compute-1.amazonaws.com:
+                    services:
+                      - kv
+                      - index
+                      - n1ql
