--- a/playbooks/includes/initialize-first-node-in-cluster.yml
+++ b/playbooks/includes/initialize-first-node-in-cluster.yml
@@ -4,7 +4,10 @@
 #refernce documentation for auto-failover settings -> https://docs.couchbase.com/server/current/rest-api/rest-cluster-autofailover-enable.html
 #reference documentation for index storage mode -> https://docs.couchbase.com/server/current/rest-api/post-settings-indexes.html
 ---
-   
+# - hosts: couchbase_nodes
+#    become: true
+  
+#    tasks:    
       - name: first KV noded added to cluster(temp variable used for adding other nodes playbook)
         set_fact:
           first_node: "{{hostvars[item].inventory_hostname}}"
@@ -17,7 +20,7 @@
         set_fact:
           services: "{{hostvars[item].services}}"
       - name: yet another fact
-        set_fact:
+        set_fact:        
           base_uri: "{{couchbase_cluster.security.http_protocol}}://{{node}}:{{couchbase_cluster.security.port}}"
 
       - name: Initialize First Node In Cluster
@@ -28,7 +31,7 @@
           -d 'index_path={{couchbase_cluster.paths.index}}&' \
           -d 'cbas_path={{couchbase_cluster.paths.analytics}}&' \
           -d 'eventing_path={{couchbase_cluster.paths.eventing}}&'
-      - name: Rename Node using host name
+      - name: Rename Node using host name 
         command: >-
           curl  -u "{{couchbase_cluster.security.admin_user}}":"{{couchbase_cluster.security.admin_pwd}}" -v -X POST "{{base_uri}}"/node/controller/rename \
           -d 'hostname={{node}}'
@@ -46,11 +49,11 @@
         command: >-
           curl  -u "{{couchbase_cluster.security.admin_user}}":"{{couchbase_cluster.security.admin_pwd}}" -v -X POST "{{base_uri}}"/settings/web \
           -d 'password={{couchbase_cluster.security.admin_pwd}}&username={{couchbase_cluster.security.admin_user}}&port={{couchbase_cluster.security.port}}'
-
+        
       - name: Play to loop over buckets and include the bucket config REST API call
         include_tasks: includes/bucket-tasks.yml
-        loop: "{{couchbase_cluster.buckets}}"
-
+        loop: "{{couchbase_cluster.buckets}}" 
+       
       - name: Create the Cluster Name
         command: >-
           curl  -u "{{couchbase_cluster.security.admin_user}}":"{{couchbase_cluster.security.admin_pwd}}" -v -X POST "{{base_uri}}"/pools/default \
