significant modifications for the inventory file. There was a defect based on how the original inventory file was structured and the array sorting in ansible was not behaving as expected. The inventory file structure was changed from a YAML format to an .ini format for ease of use and flexibility. Also removed the global.yml and replaced it with the all.yml file in the group_vars directory. Also modified the README.md file to reflect necessary changes.

--- a/bin/setup_env.yml
+++ b/bin/setup_env.yml
@@ -46,17 +46,13 @@
           dest: "{{inventory_file_path_value}}/inventory"
           content: |
             #this is the default inventory file
-            #for each node in your Couchbase cluster, simply repeat each host entry with the services you want running on the node
-            ---
-              couchbase_nodes:
-                hosts:
-                  ec2-0-0-0-0.compute-1.amazonaws.com:
-                    services:
-                      - kv
-                      - index
-                      - n1ql
-                  ec2-0-0-0-0.compute-1.amazonaws.com:
-                    services:
-                      - kv
-                      - index
-                      - n1ql
+            #master-host will be the first node you add to the Couchbase cluster. This node must implement the data service(e.g. kv). Other services can also be co-located, but kv must exist for this node
+            [master-host]
+            host1.acme.com services=kv
+
+            #other-hosts are all of the other Couchbase nodes in your cluster(do not include the master-host in this list).You can have services as needed. Each respective hosts has a services host variable in-line with the host name.
+            #you can add/remove services as needed from the services host variables.
+            [other-hosts]
+            host2.acme.com    services=n1ql,index
+            host3.acme.com    services=cbas
+            host4.acme.com    services=fts,eventing
