modifying linux tuning to better support disabling THP and enforcing it to persist a reboot operation.

--- a/playbooks/includes/configure-linux-tunings.yml
+++ b/playbooks/includes/configure-linux-tunings.yml
@@ -12,17 +12,17 @@
       - name: Get the new keep-alive value
         shell: "cat /proc/sys/net/ipv4/tcp_keepalive_time"
         register: newcatoutput
-      - debug: msg={{newcatoutput.stdout_lines[0]}}  
+      - debug: msg={{newcatoutput.stdout_lines[0]}}
 
       - name: Set the keep-alive probes
         shell: echo 5 > /proc/sys/net/ipv4/tcp_keepalive_probes
-     
-      - name: Set reuse of TIME-WAIT sockets 
+
+      - name: Set reuse of TIME-WAIT sockets
         shell: echo 1 > /proc/sys/net/ipv4/tcp_tw_reuse
 
       - name: Increase the tcp-time-wait buckets pool size to prevent DDoS attacks
         shell: echo 1440000 > /proc/sys/net/ipv4/tcp_max_tw_buckets
-          
+
       - name: Configure vm.swappiness so that kernal only swaps as a last resort
         shell: echo "{{couchbase_cluster.kernel_tuning.vm_swappiness}}" > /proc/sys/vm/swappiness
 
@@ -37,7 +37,7 @@
         shell: echo "32768 60999" >/proc/sys/net/ipv4/ip_local_port_range
       - name: Configure ip_local_port_range parameters to survive a reboot operation
         shell: echo "net.ipv4.ip_local_port_range = 32768 60999" >> /etc/sysctl.conf
- 
+
       - name: Set the keep-alive interval
         shell: echo 15 > /proc/sys/net/ipv4/tcp_keepalive_intvl
 
@@ -62,7 +62,7 @@
       - name: Force the file handles to survive a reboot(Part 1)
         shell: echo "" >> /etc/sysctl.conf
       - name: Force the file handles to survive a reboot (Part 2)
-        shell: echo "#Set fs.file-max to 2097152" >> /etc/sysctl.conf 
+        shell: echo "#Set fs.file-max to 2097152" >> /etc/sysctl.conf
       - name: Force the file handles to survue a reboot(Part 3)
         shell: echo "fs.file-max = 2097152" >> /etc/sysctl.conf
 
@@ -83,25 +83,62 @@
       - name: Set User Limits (Part 5)
         shell: echo "couchbase hard core unlimited" >> /etc/security/limits.conf
 
-      - name: Initially Configure Transpaent Huge Pages(THP)
-        shell: echo never > /sys/kernel/mm/transparent_hugepage/enabled
-      - name: Configure Transparent Huge Pages(THP Part 2)
-        shell: echo never > /sys/kernel/mm/transparent_hugepage/defrag
-    
+      - name: Create disable-thp file to prepare for execution
+        ansible.builtin.file:
+          path: /etc/init.d/disable-thp
+          state: touch
 
-      - name: Backup /etc/rc.local before making any changes to the file
-        shell: cp -p /etc/rc.local /etc/rc.local.bak
+      - name: Create content for disable THP script
+        copy:
+          dest: /etc/init.d/disable-thp
+          content: |
+            #!/bin/bash
+            ### BEGIN INIT INFO
+            # Provides:          disable-thp
+            # Required-Start:    $local_fs
+            # Required-Stop:
+            # X-Start-Before:    couchbase-server
+            # Default-Start:     2 3 4 5
+            # Default-Stop:      0 1 6
+            # Short-Description: Disable THP
+            # Description:       Disables transparent huge pages (THP) on boot, to improve
+            #                    Couchbase performance.
+            ### END INIT INFO
 
+            case $1 in
+              start)
+                if [ -d /sys/kernel/mm/transparent_hugepage ]; then
+                  thp_path=/sys/kernel/mm/transparent_hugepage
+                elif [ -d /sys/kernel/mm/redhat_transparent_hugepage ]; then
+                  thp_path=/sys/kernel/mm/redhat_transparent_hugepage
+                else
+                  return 0
+                fi
 
+                echo 'never' > ${thp_path}/enabled
+                echo 'never' > ${thp_path}/defrag
 
-      - name: Configure THP to survivie reboots(part 1)
-        shell: echo "" >> /etc/rc.local
-      - name: Configure THP to survive reboots(part 2)
-        shell: echo "#Set THP to execute at boot-time" >> /etc/rc.local
-      - name: Configure THP to survive reboots(part 3)
-        shell: echo "sudo echo never > /sys/kernel/mm/transparent_hugepage/enabled" >> /etc/rc.local
-      - name: Configure THP to survive reboots (part 4)
-        shell: echo "sudo echo never > /sys/kernel/mm/transparent_hugepage/defrag" >> /etc/rc.local
+                re='^[0-1]+$'
+                if [[ $(cat ${thp_path}/khugepaged/defrag) =~ $re ]]
+                then
+                  # RHEL 7
+                  echo 0  > ${thp_path}/khugepaged/defrag
+                else
+                  # RHEL 6
+                  echo 'no' > ${thp_path}/khugepaged/defrag
+                fi
+
+                unset re
+                unset thp_path
+                ;;
+            esac
+
+      - name: Make the THP script executable
+        shell: sudo chmod 755 /etc/init.d/disable-thp
+
+      - name: Configure OS to run the script at boot-time
+        shell: sudo chkconfig --add disable-thp      
+
 
       - name: Configure Packet Steering for virtualized envionments
         shell: echo f > /sys/class/net/eth0/queues/rx-0/rps_cpus
